--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -47,3 +47,14 @@ input {
     border-bottom:1px solid #444; 
     cursor: pointer;
 }
+
+.shelf-item {
+    width: 400px;
+    display: inline-block;
+    padding: 20px;
+    text-align: center;
+}
+
+img {
+    width: 400px;
+}
